--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minifanaticos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,500;1,100;1,400&family=Roboto&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,500;1,100;1,400&family=Roboto&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="fondo-body" class="grid">
     <!-- Abrimos el encabezado -->
     <header>
-        <!-- Armamos el menu navegable -->
-        <!-- Antes del <nav> colocamos un checkbox y un <label> (hamburguesa) para luego armar el menu desplegable mobile. -->
-        <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="../assets/boton-hamburguesa.png" alt="imagen-boton-menu"></label>
-        <nav class="grid__nav">
-            <ul class="main-menu">
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="historia.html">Historia</a>
-                </li>
-                <li>
-                    <a href="galeria.html">Galeria</a>
-                </li>
-                <li>
-                    <a href="ubicacion.html">Ubicación</a>
-                </li>
-                <li>
-                    <a href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <!-- Armamos el menu navegable utilizando Bootstrap -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark grid__nav">
+            <div class="container-fluid bg-color">
+                <a class="navbar-brand" href="../index.html">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="navbar-brand" href="historia.html">Historia</a>
+                        <a class="navbar-brand" href="galeria.html">Galeria</a>
+                        <a class="navbar-brand" href="ubicacion.html">Ubicacion</a>
+                        <a class="navbar-brand" href="contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
 
     </header>
@@ -55,7 +55,7 @@
                 </div>
                 <div>
                     <h2 class="h2-galeria">Un mini en el desierto:</h2>
-                <img src="../assets/mini-desierto.jpg" alt="imagen-mini-cooper" class="imagen-galeria">
+                    <img src="../assets/mini-desierto.jpg" alt="imagen-mini-cooper" class="imagen-galeria">
                 </div>
                 <div>
                     <h2 class="h2-galeria">Un mini de juguete:</h2>
@@ -82,7 +82,7 @@
                     <img src="../assets/minis-noche.jpg" alt="imagen-minis-denoche" class="imagen-galeria">
                 </div>
             </div>
-        </section>    
+        </section>
     </main>
     <!-- Terminamos el cuerpo principal y arrancamos el pie de pagina -->
     <footer class="grid__footer">
@@ -91,6 +91,9 @@
         </div>
     </footer>
     <!-- Terminamos el pie de pagina y cerramos el body -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
